<resources>
    <string name="app_name">Hackamemory</string>
    <string name="memory_game">Memory game</string>
    <string name="choose_difficulty">Choose game size</string>
    <string name="_4_x_5">4 x 5</string>
    <string name="_4_x_4">4 x 4</string>
    <string name="_5_x_2">5 x 2</string>
    <string name="_3_x_4">3 x 4</string>
    <string name="attempts_format">Attempts left: %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>