<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/balloons"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="42sp"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="200dp"
            android:textColor="@color/black"
            android:text="@string/memory_game" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-medium"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:text="@string/choose_difficulty" />

        <Button
            android:id="@+id/easy_button"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:text="@string/_3_x_4"/>

        <Button
            android:id="@+id/normal_button"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:text="@string/_5_x_2"/>

        <Button
            android:id="@+id/hard_button"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:text="@string/_4_x_4"/>

        <Button
            android:id="@+id/very_hard_button"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:text="@string/_4_x_5"/>

    </LinearLayout>
</layout>